7861w - added to branching sections

--- a/text.textile
+++ b/text.textile
@@ -319,15 +319,23 @@ So, what do all the arrows in these illustrations really mean?  How does Git act
 !../artwork/s1/traversing-git-objects.png!
 
 
-h3. Branching and Merging
+h2. Branching and Merging
 
-Now, let's see how git handles branching, fetching and merging operations, data-wise.
+Here we come to one of the real strengths of Git, cheap branching.  This is a feature that truly sets it apart and will likely change the way you think about developing code once you get used to it.
 
-For the following illustrations, we will represent the entire tree and the commit it points to as a single object. 
+When you are working on code in git, storing trees in any state and keeping pointers to them is very simple, as we've seen.  In fact, in Git the act of creating a new branch is simply writing a file in the '.git/refs/heads' directory that has the sha of the last commit for that branch.  
+
+.note Branching is just writing 40 characters to a file
+
+Switching to that branch simply means making your working directory look like the tree that sha points to and updating the HEAD file so each commit from that point on moves that branch pointer forward (makes the 40 characters in '.git/refs/heads/[current_branch_name]' be the SHA of your last commit).
+
+Merging is also simple, compared to most SCM systems - is just merging the trees that the commits you are trying to merge are pointing to, which is much simpler than resolving a bunch of deltas.
+
+Now, let's see how git handles branching, fetching and merging operations abstractly. For the following illustrations, we will represent the entire tree and the commit it points to as a single object. 
 
 !../artwork/s1/branches1.png!
 
-h4. Simple Case
+h3. Simple Case
 
 Let's say we work on a project for a while, then we get an idea for something that may not work out, but we want to do a quick proof-of-concept.  We create a new branch called 'experiment' off of our main branch, which is by convention called 'master'.  We then switch to the new branch, then create a few commits.
 
@@ -341,7 +349,7 @@ At this point, we show the new branch to our co-workers and everyone likes the n
 
 !../artwork/s1/branch-story3.png!
 
-h4. Remotes
+h3. Remotes
 
 Now lets take a look at remotes.  Remotes are basically other peoples branches of the same repository.  If you got your repository by cloning it, rather than initializing it, you should have a remote branch of where you copied it from automatically added as 'origin' by default.  Which means the tree that was checked out during your initial clone would be referenced as 'origin/master', which means 'the master branch of the origin remote'. 
 
@@ -359,7 +367,7 @@ We look at the 'idea' branch and like where they're going with it, but we also w
 
 Now we can run our tests and merge back into our master branch if we want.  Then we can tell our friend we cloned from to fetch from our repository, where we've merged their two branches for them and integrated some of our changes as well.  They can choose to accept or reject that "patch".
 
-h4. Rebasing
+h3. Rebasing
 
 Let's say you and another developer, Jen, are working on the same project simultaneously.  She clones from you, and works for a while and commits.  You have committed in the meantime and want to get your work in sync, so you add her repository as the remote 'jen', do a fetch and merge her changes in, creating a new merge commit.  (All commits that are simply merges are given a darker color in this example)
 
@@ -395,6 +403,23 @@ And finally, we are left with a commit history that looks like Figure 1, rather 
 
 
 note. You should remember to only do this on local branches before you push or on repositories that nobody has fetch access to - if anyone pulls down the objects that will become abandoned during a rebase, it gets a bit frustrating.
+
+h3. Use Cases
+
+So why is this helpful, exactly?  It means that you can keep your development cycles loosely coupled.  Here is an example of a common workflow with cheap branches.  
+
+You have a 'master' branch that is _always_ stable - you never merge anything into it that you wouldn't put into production. Then you have a 'development' branch that you merge any experimental code into before you imagine pulling it into the 'master' branch.  
+
+You create a new branch each time you begin to work on a story or feature, branching it off your current 'development' branch each time, so if you get blocked and need to put it on hold, it doesn't effect anything else.  When you do get back to them, you rebase them to the current 'development' and it's just like you started from there.  Often times you merge the branch back into 'development' and delete it the same day that you created it.  
+
+If you get a huge project or idea - say refactoring the entire code base to the newest version of your framework or switching database vendors or something, you create a long-term branch, continuously rebase it to keep it in line with other development, and once everything is tested and ready, merge it in with your master.
+
+Working with others is unbelievably easy. You ask in an IRC room if someone has implemented a feature in a library you are using.  Turns out that someone has and you are sent the URL of their public git repo for that project.  You add it as a remote, fetch it, create a new 'merge-feature' branch off your 'development' branch, merge in the new changes and you're done.  No emailing patches around and applying them - just add contributors as a remote and try out their branches before deciding to merge them in. If it breaks things or is not a good patch, you simply delete the 'merge-feature' branch and that's it.
+
+You branch and rebase or merge several times a day in and out of several different branches, some of which last for hours and some are continually there.  Once you get used to this pattern, it completely changes the way you approach your development and the way you contribute and collaborate.
+
+
+
 
 h2. The Treeish
 
@@ -524,7 +549,9 @@ Let's say you want to build something like a distributed Time-Machine (Apple all
 
 h1. Section 2 - Using Git
 
-Now that you understand what Git does at a fundamental level - how it tracks and stores content, how it stores branches and merges and tracks remote copies of the repository, let's see how to actually use it.
+Now that you understand what Git does at a fundamental level - how it tracks and stores content, how it stores branches and merges and tracks remote copies of the repository, let's see how to actually use it.  This next section presents some of the basic commands that you will need to know in order to use git effectively.  
+
+At the end of each section, there will be a link to the full documentation for each of the commands used in that section, in case you want to learn more or see all the options for that command.
 
 h2. Getting a Git Repository
 
@@ -578,21 +605,25 @@ code. gitignore.txt
 
 h3. Adding and Committing
 
-Now we'll do some development and periodically commit our changes.  We have a few options here - we can commit individual files or we can tell the _commit_ command to automatically add all modified files in our working directory to the commit.
+Now we'll do some development and periodically commit our changes.  We have a few options here - we can commit individual files or we can tell the _commit_ command to automatically add all modified files in our working directory to the index, then commit it.
 
-A good way to find out what you're about to commit is to use the 'status' command.
+A good way to find out what you're about to commit (that is, what is in your index) is to use the 'status' command.
 
 shell. git-status.txt
 
-In this example, I can see that I've modified three files in my tree, but none of them have been added to the index yet - they are not staged and ready to be committed.  If I want to make these changes in two seperate commits, or I have completed work on some of them and would like to push that out, I can specify which files to add individually and then commit.
+In this example, I can see that I've modified three files in my working directory, but none of them have been added to the index yet - they are not staged and ready to be committed.  If I want to make these changes in two separate commits, or I have completed work on some of them and would like to push that out, I can specify which files to add individually and then commit.
 
 shell. git-add-status.txt
 
 You can see that if we commit at this point, only the Rakefile will show up as changed in the commit.
 
-If we want to commit all our changes, we can use this shorthand:
+!../artwork/s2/git-add-commit.png!
+
+If we want to commit all our changes, we can use this shorthand, which will automatically run a 'git add' on every modified file to our index, then commit the whole thing:
 
 shell. $> git commit -a -m 'committing all changes'
+
+!../artwork/s2/git-commit-a.png!
 
 If you would like to give a more useful commit message, you can leave out the '-m' option.  That will fire up your $EDITOR to add your commit message.
 
@@ -671,16 +702,59 @@ With those basic commands, you should be able to explore and inspect any object 
 
 h2. Git Diff
 
-diff - getting and sending patchfiles
+Git has a great diff utility built in that can give you statistics or a patch file given any combination of tree objects, working directory and index.
+
+Two common uses of this include seeing what you've worked on but not committed yet, and creating a patch file to send to someone over email (though there is a much preferred way to do that which we will learn about in the "distributed workflow" section a bit later).
+
+h3. What has changed?
+
+If you simply run 'git diff' with no arguments, it will show you the differences between your current working directory and my index, that is, the last time I ran 'git add' on my files.  For example, if I add my email to the README file and run it, I will see this:
+
+.shell git-diff-readme.txt
+
+You can also use 'git diff' to show you some spiffy stats for a diff, rather than a patch file, if you want to see a wider overview of what changed, then drill down into specific files later.  Here are some examples getting stats, the first for the differences between two commits and the second a summary between a commit and the current HEAD.
+
+.shell git-diff-stat.txt
+
+If you want to see what the specific difference is in one of those files, you can just add a path limiter to the diff command.
+
+.shell git-diff-file.txt
+
+You can use this command to detect changes between your index and any tree, or your working directory and any tree, your working directory and your index, etc.
+
+* "git diff":http://www.kernel.org/pub/software/scm/git/docs/git-diff.html
 
 h2. Branching
 
-branch, checkout
+This is the fun part of Git that you'll come to love like a child. When you first initialize a git repository, or clone one, you'll get a 'master' branch by default if you don't specify something else.  This is really just a git suggestion and you don't have to use it - like just about everything in Git, it can be overridden.
+
+h3. Switching Branches
+
+However, let's say we're working on our project and we want to add a new function to our library, so we'll make a new branch called 'newfunc' and switch to it.  There are two ways we can do this, one is to create the branch and then switch to it:
+
+.shell $>git branch newfunc; git checkout newfunc
+
+The other way is to checkout a branch that doesn't exist yet and tell git you want to create it by passing the '-b' flag:
+
+.shell $> git checkout -b newfunc
+
+Now, to check which branch we are on, we just type 'git branch':
+
+.shell git-branch.txt
+
+We can see we are now on our new branch.  This means that if we modify a file and commit it, this branch will include that change, but the 'master' branch will not have it yet.  So, we add a new method to our library and commit it.
+
+h3. Reseting Your Branch
+
+
+branch
+checkout
 reset
-git branch recovered-branch 7281251ddd
 
 
 h2. Simple Merging
+
+Now we want to move it back into our 'master' branch and remove our temporary 'newfunc' branch.
 
 h2. Rebasing
 
@@ -780,11 +854,15 @@ http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html
 
 h3. Splitting One Commit into Two
 
+
 h2. Repository Maintenance
 
 h2. Patch Management
 
 h2. Recovering From Corruption
+
+(creating a branch from an abandoned commit)
+git branch recovered-branch 7281251ddd
 
 h1. Commands Overview
 
