--- a/text.textile
+++ b/text.textile
@@ -31,8 +31,6 @@ h3. Installing on Mac
 
 You are likely going to want to install git without the asciidoc dependency because it is a pain to install.  When you compile from source, you will see
 
-http://sourceforge.net/project/showfiles.php?group_id=146701
-
 h4. Mac 10.4 - Tiger
 
 There are some requirements you'll have to install before you can compile git.
@@ -53,6 +51,8 @@ h4. Mac 10.5 - Leopard
 All the requirements are installed with the developer CD, so you can just download source and compile pretty easily if the developer tools are installed. 
 
 MacPorts is also an easy option if you have that installed.
+
+http://code.google.com/p/git-osx-installer/
 
 
 h3. Windows
@@ -633,6 +633,43 @@ Now we can continue this loop - modifying, adding and committing - during our de
 
 * "git status":http://www.kernel.org/pub/software/scm/git/docs/git-status.html
 
+h3. Interactive Adding
+
+Although that will work for all of your development needs - many developers simply use '-a' nearly every time they commit to just automatically add everything to the index, there is another way of adding files that makes for a more controlled and thematic set of commits.  This is called 'interactive' adding, and it is a very powerful tool to controlling what goes into each commit.
+
+Let's say we add a new function to our 'lib/simplegit.rb' file, add a new task to our 'Rakefile' and then add a new 'TODO' file to our project.  Later we come back and want to commit, but we don't remember which files had to do with each other and we don't just want to commit them all together because that's confusing for collaborators trying to review our code. 'Interactive' mode let's us modify our index interactively before committing.  To fire it up, type 'git add -i':
+
+.shell s2/interactive-mode1.txt
+
+We can see that we have two files that are being tracked (have been added at some point in the past) that have been modified.  We cannot yet see our new TODO file, though.  To add that, type '4' for the 'add untracked' option and hit enter.
+
+.shell s2/interactive-mode2.txt
+
+You will see all the untracked files in your working directory.  Type the numbers of the files you want to add and hit enter twice when you're done. This will drop you back to the main menu.  You can then type '1' to see what your index looks like now.
+
+.shell s2/interactive-mode3.txt
+
+You can see that the TODO file is now staged (in the index), but the other two are not.  Let's add the Rakefile, but not the 'lib/simplegit.rb' file and commit it. To do that, we hit '2', which lists the files we can update, type '1' and enter to add the Rakefile, then hit enter again to go back to the main menu.  Then we hit '7' to exit and run the 'git commit' command
+
+.shell s2/interactive-mode4.txt
+
+The interactive shell is pretty simple - playing with it instead of running 'git add' commands directly may help in understanding what's happening, since you can see the status of your files in the index versus the working directory more clearly.  It helps visualize that what is in your index (the 'staged' column) is what will be committed when you run 'git commit'
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 h2. Log - the Commit History
 
 So, now we have all this history in our Git repository.  So what?  What can we do with it?  How can we see this history?
@@ -744,21 +781,69 @@ Now, to check which branch we are on, we just type 'git branch':
 
 We can see we are now on our new branch.  This means that if we modify a file and commit it, this branch will include that change, but the 'master' branch will not have it yet.  So, we add a new method to our library and commit it.
 
-h3. Reseting Your Branch
+.shell $> vim lib/simplegit.rb; git commit -a -m 'added lstree function'
+Created commit 1a8c32e: added lstree function
+ 1 files changed, 4 insertions(+), 0 deletions(-)
+ 
+Now we want to change something in the README in the 'master' branch, but we haven't tested this function yet so we don't want to merge our new branch in yet.  That's fine, we just switch back and make the change.
 
+.shell git-checkout-master-work.txt
 
-branch
-checkout
-reset
+Now lets see what the differences in our branches are.
+
+.shell git-branch-diff.txt
+
+We could also get a patch file for one to apply to the other, but what we really want to do next is merge the two.
+
+* "git branch":http://www.kernel.org/pub/software/scm/git/docs/git-branch.html
+* "git checkout":http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html
 
 
 h2. Simple Merging
 
-Now we want to move it back into our 'master' branch and remove our temporary 'newfunc' branch.
+So now we want to move the changes in our 'newfunc' branch back into our 'master' branch and remove it.  This will require us merging one branch into another.  Since we're already in our 'master' branch, we'll merge in the 'newfunc' branch like this:
+
+.shell $>git merge newfunc
+
+Easy peasy.  We can see that the simplegit.rb file now has 4 new lines and the README file was auto-merged.
+
+Now we can get rid of our 'newfunc' branch with a simple:
+
+.shell $>git branch -d newfunc
+Deleted branch newfunc.
+
+h3. Resolving Conflicts
+
+That was a fairly simple problem, but what if we branch our code and then edit the same place in a file in two different ways?  In that case, we'll get a conflict when we try to merge them back together.  Git is not too aggressive in trying to resolve conflicts, since you don't want it to make assumptions that are not necessarily correct, so bugs aren't introduced without your knowledge.
+
+Let's say that we created a 'versioning' branch and then modified the version in the Rakefile to different versions in both the new branch and the 'master' branch, then tried to merge them together.
+
+.shell s2/merge-conflict.txt
+
+It tells us that there was a conflict and so the new commit object was not created.  We will have to merge the conflicted file manually and then commit it again.  The output tells us the files that had conflicts, in this case it was the Rakefile.
+
+.ruby s2/rakefile.rb
+
+We can see that in the 'master' branch, the version was changed to '0.1.2' and in the 'versioning' branch, the same line was changed to '0.2.0'.  All we have to do is choose which one is correct and remove the rest of the lines, like so:
+
+.ruby s2/rakefile-post.rb
+
+Now we add and commit that file, and we're good.
+
+.shell $>git add Rakefile 
+$>git commit -m 'fixed conflict'
+Created commit 47c668a: fixed conflict
+
+* "git branch":http://www.kernel.org/pub/software/scm/git/docs/git-branch.html
+* "git merge":http://www.kernel.org/pub/software/scm/git/docs/git-merge.html
 
 h2. Rebasing
 
-h3. Interactively Rebasing
+h3. Interactive Rebasing
+
+h3. Resetting Your Branch
+
+reset
 
 h2. Distributed Workflow Examples
 
