--- a/text/s4-c06a-history-manipulation.textile
+++ b/text/s4-c06a-history-manipulation.textile
@@ -6,3 +6,9 @@ http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html
 
 h3. Splitting One Commit into Two
 
+rebase -i
+
+h3. Removing Commits
+
+git-rebase --onto topicA~5 topicA~3 topicA
+
