--- a/text.textile
+++ b/text.textile
@@ -416,6 +416,8 @@ If you get a huge project or idea - say refactoring the entire code base to the 
 
 Working with others is unbelievably easy. You ask in an IRC room if someone has implemented a feature in a library you are using.  Turns out that someone has and you are sent the URL of their public git repo for that project.  You add it as a remote, fetch it, create a new 'merge-feature' branch off your 'development' branch, merge in the new changes and you're done.  No emailing patches around and applying them - just add contributors as a remote and try out their branches before deciding to merge them in. If it breaks things or is not a good patch, you simply delete the 'merge-feature' branch and that's it.
 
+!../artwork/s1/branching.png!
+
 You branch and rebase or merge several times a day in and out of several different branches, some of which last for hours and some are continually there.  Once you get used to this pattern, it completely changes the way you approach your development and the way you contribute and collaborate.
 
 
@@ -834,8 +836,23 @@ Now we add and commit that file, and we're good.
 $>git commit -m 'fixed conflict'
 Created commit 47c668a: fixed conflict
 
+h3. Undoing a Merge
+
+Assume we have gone through some massive merge because someone on your team hasn't commited in a while, or you have a branch that was created some time ago but hasn't been rebasing and you want to pull it in.  So you try to 'git merge old_branch' it and you get conflict after conflict and it is just too much trouble to deal with and you just want to undo it all.
+
+This is where 'git reset' comes in.  To reset your working directory and index back to what it was before you tried the merge, simply run:
+
+.shell $>git reset --hard HEAD
+
+The '--hard' makes sure both your index file and working directory are changed to match what it used it be. By default it will only reset your index, leaving the partially merged files in your working directory.  If you happen to have worked through it all and committed, then decided that it was a mistake because all of your tests break or something, you can still go back (and throw away that commit) by running:
+
+.shell $>git reset --hard ORIG_HEAD
+
+This is only helpful if you want to undo the latest change or changes.  If you happen to commit again then decide that you want to keep the latest commit, but undo a commit that was added sometime before that, you'll need to use 'git revert', which is covered in [History Manipulation]
+
 * "git branch":http://www.kernel.org/pub/software/scm/git/docs/git-branch.html
 * "git merge":http://www.kernel.org/pub/software/scm/git/docs/git-merge.html
+* "git reset":http://www.kernel.org/pub/software/scm/git/docs/git-reset.html
 
 h2. Rebasing
 
@@ -866,28 +883,56 @@ In this case we will simply fix the conflict, run 'git add' on the file and then
 
 !../artwork/s2/repo3.png!
 
-Then all we have to do is switch to the master branch and merge story84 to get this:
+Then all we have to do is switch to the master branch and merge 'story84' to get this:
 
 !../artwork/s2/repo4.png!
 
 
 h3. Interactive Rebasing
 
-Like git provides a nicer way to work with your index before committing with 'git add --interactive', there is an interactive rebasing option.
+Much like Git provides a nicer way to work with your index before committing with 'git add --interactive', there is an interactive rebasing option that can only be described as the "bee's knees".
 
+Assume we have started working on a story to add the 'git add' functionality to our library and so we've started a new branch called 'story92' and done the work there.  Then we decide that the 'ls-tree' function needs to be recursive and make that change, then we tweak the library again, committing each time. Meanwhile we've pulled in a change that implements the same 'ls-tree' change differently into our 'master' branch.  
 
+!../artwork/s2/repo-rebasei1.png!
 
-h3. Resetting Your Branch
+We can see before we try the merge that the same change is in each branch, and I can see that the master branch version is better, so I don't even really want to merge it, I just want to throw my change away.  Also, I don't really need the other two commits to be two commits, because the second one is just a tweak and could be squashed into the first one.  Lets use 'git rebase -i' to rebase this branch and make those changes.  When we run the command, our editor comes up, showing this:
 
+.code s2/repo-rebase.txt
+
+Now we can see all of the commits that we are going to rebase.  If we remove the 'made ls-tree recursive' line, it effectively ditches that commit so we'll avoid a conflict and not have to worry about it.  Changing the action on the last line to 'squash' tells git to just make this and the previous commit into a single commit.  So if we exit the editor with this as the new text:
+
+.code s2/repo-rebase2.txt
+
+Then git sees we have squashed two commits and wants us to pick a commit message for it, giving us the commit messages of both for us to create a new one for.
+
+.code s2/repo-rebase3.txt
+
+So we stick with the first message, save and exit the editor.
+
+.shell s2/repo-rebase4.txt
+
+Now we've rebased and instead of three commits on top of our master and having to reconcile a useless conflict, we've just added a single commit with no resolving neccesary:
+
+!../artwork/s2/repo-rebasei2.png!
+
+The rebase command is one of the most useful and unique in the git workflow.  To learn more about some spiffy things you can do with it, check out the [History Manipulation] and [Advanced Merging] sections.
 
 * "git rebase":http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html
 * "git reset":http://www.kernel.org/pub/software/scm/git/docs/git-reset.html
 
 h2. Distributed Workflow Examples
 
+Now we've gone over most of the basic commands that you'll use on a day to day basis as a single developer.  This chapter covers some examples of what you will use in order to collaborate with other developers on a code base.
+
 h3. Cloning
 
+If you want to begin working on an existing project, you will need to get an initial version of it - copy it's repository of objects and references to your machine. This is done with a clone.  Git can clone a repository over several transports, including http, https, ssh, it's own 'git' protocol, and rsync.  The 'git' protocol and 'ssh' are preferred because they are more efficient and not difficult to set up.  
+
+
+
 h3. Fetching, Pulling (tracking branches)
+
 
 h3. Pushing
 
@@ -900,19 +945,38 @@ h2. Tagging
 
 h2. Sharing Repositories
 
-h3. Over SSH
-
-git clone --bare; scp
-
 h3. Over Git
 
-git daemon --detach
+Git provides it's own special protocol, which is basically just a really thin wrapper over the 'git-upload-pack' command that will tell you what is available, then you tell it what you have and it gives you a packfile of the difference.  To start it up, run something like the following command:
+
+.shell $> git daemon --detach
+
+The git protocol has no built in authentication, so generally you cannot push over it (although some people have open push policies and so allow that - I would not recommend setting that up, so you'll have to look up how to do that).  If you want your users to have push access, it's recommended to use the ssh protocol.  Many repositories, like GitHub, have ssh enabled for account owners to push over, and git enabled for the public to pull over - which is often the most efficient combination.
+
+* "git-daemon":http://www.kernel.org/pub/software/scm/git/docs/git-daemon.html
+
+h3. Over SSH
+
+Git can work entirely over SSH - it actually does much the same thing that happens over the git protocol, except it implicitly has authentication built in, so if the user they are ssh'ing in as has access to write to the repo, then that user can push over ssh as well.
+
+.shell $> git clone --bare; scp
 
 h3. Over Http
 
-git update-server-info
+this is pretty easy to setup because there is no requirement other than a static web server - it is not like SVN which requires a DAV server to run.  If you want to push over http, however, you will need DAV setup - it's generally a much better idea to use ssh to do so, however.
 
-h4. GitHub
+The only caveat is that you need to run 'git update-server-info' each time you commit to the repository.
+
+.shell $> git update-server-info
+
+It is generally a good idea to put this in the 
+
+.sidebar actually, you can run this without update-server-info if you never pack objects and you have a pre-defined list of branches you are always fetching.  All that update-server-info does is put a list of branches into one file (.git/info/refs) and a list of pack files into another (.git/objects/info/pack) to get around the fact that you cannot reliably list contents of a directory over http - it's not built into the protocol. So for git to know what packfiles and branches are available, it needs to have one url it can get those from.
+
+h4. Hosted Repositories
+
+
+h3. GitHub
 
 h1. Section 3 - Git and Other Systems
 
@@ -956,6 +1020,7 @@ h2. Submodules
 
 h2. Advanced Merging and Rebasing
 
+
 * merge strategies
 ** resolve
 ** recursive
@@ -964,6 +1029,8 @@ h2. Advanced Merging and Rebasing
 rebase --onto
 
 splitting commits in interactive mode
+
+http://www.kernel.org/pub/software/scm/git/docs/git-mergetool.html
 
 http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html
 
